build.gradle auto SF

--- a/modules/modules.properties
+++ b/modules/modules.properties
@@ -343,7 +343,7 @@ bundle.version[com.liferay.batch.engine.api]=14.3.1
 bundle.version[com.liferay.batch.engine.service]=4.0.9
 bundle.version[com.liferay.batch.engine.test]=1.0.0
 bundle.version[com.liferay.batch.planner.api]=1.0.2
-bundle.version[com.liferay.batch.planner.rest.api]=1.0.2
+bundle.version[com.liferay.batch.planner.rest.api]=1.1.0
 bundle.version[com.liferay.batch.planner.rest.client]=1.0.2
 bundle.version[com.liferay.batch.planner.rest.impl]=1.0.2
 bundle.version[com.liferay.batch.planner.rest.test]=1.0.0
@@ -382,7 +382,7 @@ bundle.version[com.liferay.bookmarks.test]=1.0.0
 bundle.version[com.liferay.bookmarks.uad.test]=1.0.0
 bundle.version[com.liferay.bookmarks.uad]=6.0.5
 bundle.version[com.liferay.bookmarks.web]=5.0.11
-bundle.version[com.liferay.bulk.rest.api]=3.1.1
+bundle.version[com.liferay.bulk.rest.api]=3.2.0
 bundle.version[com.liferay.bulk.rest.client]=3.0.7
 bundle.version[com.liferay.bulk.rest.impl]=3.0.11
 bundle.version[com.liferay.bulk.rest.test]=1.0.0
@@ -491,6 +491,9 @@ bundle.version[com.liferay.commerce.notification.test.util]=4.0.3
 bundle.version[com.liferay.commerce.notification.test]=1.0.0
 bundle.version[com.liferay.commerce.notification.web]=4.0.9
 bundle.version[com.liferay.commerce.order.content.web]=4.0.10
+bundle.version[com.liferay.commerce.order.rule.api]=1.0.0
+bundle.version[com.liferay.commerce.order.rule.service]=1.0.0
+bundle.version[com.liferay.commerce.order.rule.test]=1.0.0
 bundle.version[com.liferay.commerce.order.web]=5.0.12
 bundle.version[com.liferay.commerce.organization.api]=6.1.1
 bundle.version[com.liferay.commerce.organization.web]=5.0.12
@@ -617,7 +620,7 @@ bundle.version[com.liferay.data.cleanup.test]=1.0.0
 bundle.version[com.liferay.data.cleanup]=2.0.15
 bundle.version[com.liferay.data.engine.api]=4.4.1
 bundle.version[com.liferay.data.engine.js.components.web]=1.0.19
-bundle.version[com.liferay.data.engine.rest.api]=23.1.1
+bundle.version[com.liferay.data.engine.rest.api]=23.2.0
 bundle.version[com.liferay.data.engine.rest.client]=3.0.8
 bundle.version[com.liferay.data.engine.rest.impl]=3.0.20
 bundle.version[com.liferay.data.engine.rest.test.util]=1.0.2
@@ -878,86 +881,86 @@ bundle.version[com.liferay.google.maps.web]=5.0.9
 bundle.version[com.liferay.google.places.api]=1.0.4
 bundle.version[com.liferay.google.places.test]=1.0.0
 bundle.version[com.liferay.google.places.web]=1.0.5
-bundle.version[com.liferay.headless.admin.content.api]=3.1.1
+bundle.version[com.liferay.headless.admin.content.api]=3.2.0
 bundle.version[com.liferay.headless.admin.content.client]=2.0.9
 bundle.version[com.liferay.headless.admin.content.impl]=2.0.16
 bundle.version[com.liferay.headless.admin.content.test]=1.0.0
-bundle.version[com.liferay.headless.admin.list.type.api]=1.0.2
+bundle.version[com.liferay.headless.admin.list.type.api]=1.1.0
 bundle.version[com.liferay.headless.admin.list.type.client]=1.0.2
 bundle.version[com.liferay.headless.admin.list.type.impl]=1.0.2
 bundle.version[com.liferay.headless.admin.list.type.test]=1.0.0
-bundle.version[com.liferay.headless.admin.taxonomy.api]=6.4.1
+bundle.version[com.liferay.headless.admin.taxonomy.api]=6.5.0
 bundle.version[com.liferay.headless.admin.taxonomy.client]=4.0.8
 bundle.version[com.liferay.headless.admin.taxonomy.impl]=5.0.14
 bundle.version[com.liferay.headless.admin.taxonomy.test]=1.0.0
-bundle.version[com.liferay.headless.admin.user.api]=15.0.1
+bundle.version[com.liferay.headless.admin.user.api]=15.1.0
 bundle.version[com.liferay.headless.admin.user.client]=4.0.8
 bundle.version[com.liferay.headless.admin.user.impl]=5.0.15
 bundle.version[com.liferay.headless.admin.user.test]=1.0.0
-bundle.version[com.liferay.headless.admin.workflow.api]=18.0.1
+bundle.version[com.liferay.headless.admin.workflow.api]=18.1.0
 bundle.version[com.liferay.headless.admin.workflow.client]=4.0.7
 bundle.version[com.liferay.headless.admin.workflow.impl]=5.0.11
 bundle.version[com.liferay.headless.admin.workflow.test]=1.0.0
-bundle.version[com.liferay.headless.batch.engine.api]=13.1.1
+bundle.version[com.liferay.headless.batch.engine.api]=13.2.0
 bundle.version[com.liferay.headless.batch.engine.impl]=4.0.6
-bundle.version[com.liferay.headless.commerce.admin.account.api]=11.2.1
+bundle.version[com.liferay.headless.commerce.admin.account.api]=11.3.0
 bundle.version[com.liferay.headless.commerce.admin.account.client]=4.0.7
 bundle.version[com.liferay.headless.commerce.admin.account.impl]=4.0.13
 bundle.version[com.liferay.headless.commerce.admin.account.test]=1.0.0
-bundle.version[com.liferay.headless.commerce.admin.catalog.api]=15.2.1
+bundle.version[com.liferay.headless.commerce.admin.catalog.api]=15.3.0
 bundle.version[com.liferay.headless.commerce.admin.catalog.client]=4.0.7
 bundle.version[com.liferay.headless.commerce.admin.catalog.impl]=4.0.14
 bundle.version[com.liferay.headless.commerce.admin.catalog.test]=1.0.0
-bundle.version[com.liferay.headless.commerce.admin.channel.api]=6.1.1
+bundle.version[com.liferay.headless.commerce.admin.channel.api]=6.2.0
 bundle.version[com.liferay.headless.commerce.admin.channel.client]=4.0.7
 bundle.version[com.liferay.headless.commerce.admin.channel.impl]=4.0.12
 bundle.version[com.liferay.headless.commerce.admin.channel.test]=1.0.0
-bundle.version[com.liferay.headless.commerce.admin.inventory.api]=7.1.1
+bundle.version[com.liferay.headless.commerce.admin.inventory.api]=7.2.0
 bundle.version[com.liferay.headless.commerce.admin.inventory.client]=4.0.7
 bundle.version[com.liferay.headless.commerce.admin.inventory.impl]=4.0.12
 bundle.version[com.liferay.headless.commerce.admin.inventory.test]=1.0.0
-bundle.version[com.liferay.headless.commerce.admin.order.api]=11.1.1
+bundle.version[com.liferay.headless.commerce.admin.order.api]=11.2.0
 bundle.version[com.liferay.headless.commerce.admin.order.client]=4.0.7
 bundle.version[com.liferay.headless.commerce.admin.order.impl]=4.0.16
 bundle.version[com.liferay.headless.commerce.admin.order.test]=1.0.0
-bundle.version[com.liferay.headless.commerce.admin.pricing.api]=15.1.1
+bundle.version[com.liferay.headless.commerce.admin.pricing.api]=15.2.0
 bundle.version[com.liferay.headless.commerce.admin.pricing.client]=4.0.7
 bundle.version[com.liferay.headless.commerce.admin.pricing.impl]=4.0.13
 bundle.version[com.liferay.headless.commerce.admin.pricing.test]=1.0.0
-bundle.version[com.liferay.headless.commerce.admin.shipment.api]=1.1.1
+bundle.version[com.liferay.headless.commerce.admin.shipment.api]=1.2.0
 bundle.version[com.liferay.headless.commerce.admin.shipment.client]=1.0.8
 bundle.version[com.liferay.headless.commerce.admin.shipment.impl]=1.0.14
 bundle.version[com.liferay.headless.commerce.admin.shipment.test]=1.0.0
-bundle.version[com.liferay.headless.commerce.admin.site.setting.api]=6.1.1
+bundle.version[com.liferay.headless.commerce.admin.site.setting.api]=6.2.0
 bundle.version[com.liferay.headless.commerce.admin.site.setting.client]=4.0.7
 bundle.version[com.liferay.headless.commerce.admin.site.setting.impl]=4.0.12
 bundle.version[com.liferay.headless.commerce.admin.site.setting.test]=1.0.0
 bundle.version[com.liferay.headless.commerce.core.api]=5.0.1
 bundle.version[com.liferay.headless.commerce.core.impl]=4.0.4
-bundle.version[com.liferay.headless.commerce.delivery.cart.api]=7.0.1
+bundle.version[com.liferay.headless.commerce.delivery.cart.api]=7.1.0
 bundle.version[com.liferay.headless.commerce.delivery.cart.client]=4.0.7
 bundle.version[com.liferay.headless.commerce.delivery.cart.impl]=4.0.12
 bundle.version[com.liferay.headless.commerce.delivery.cart.test]=1.0.0
-bundle.version[com.liferay.headless.commerce.delivery.catalog.api]=10.1.1
+bundle.version[com.liferay.headless.commerce.delivery.catalog.api]=10.2.0
 bundle.version[com.liferay.headless.commerce.delivery.catalog.client]=4.0.7
 bundle.version[com.liferay.headless.commerce.delivery.catalog.impl]=4.0.12
 bundle.version[com.liferay.headless.commerce.delivery.catalog.test]=1.0.0
-bundle.version[com.liferay.headless.commerce.machine.learning.api]=5.2.1
+bundle.version[com.liferay.headless.commerce.machine.learning.api]=5.3.0
 bundle.version[com.liferay.headless.commerce.machine.learning.impl]=5.0.8
-bundle.version[com.liferay.headless.commerce.punchout.api]=5.1.1
+bundle.version[com.liferay.headless.commerce.punchout.api]=5.2.0
 bundle.version[com.liferay.headless.commerce.punchout.impl]=4.0.7
 bundle.version[com.liferay.headless.common.spi]=8.0.5
-bundle.version[com.liferay.headless.delivery.api]=32.0.1
+bundle.version[com.liferay.headless.delivery.api]=32.1.0
 bundle.version[com.liferay.headless.delivery.client]=4.0.11
 bundle.version[com.liferay.headless.delivery.impl]=5.0.26
 bundle.version[com.liferay.headless.delivery.test]=1.0.0
 bundle.version[com.liferay.headless.discovery.impl]=4.0.11
 bundle.version[com.liferay.headless.discovery.web]=4.0.10
-bundle.version[com.liferay.headless.form.api]=11.2.1
+bundle.version[com.liferay.headless.form.api]=11.3.0
 bundle.version[com.liferay.headless.form.client]=4.0.7
 bundle.version[com.liferay.headless.form.impl]=5.0.11
 bundle.version[com.liferay.headless.form.test]=1.0.0
-bundle.version[com.liferay.headless.portal.instances.api]=5.0.1
+bundle.version[com.liferay.headless.portal.instances.api]=5.1.0
 bundle.version[com.liferay.headless.portal.instances.client]=1.0.2
 bundle.version[com.liferay.headless.portal.instances.impl]=2.0.7
 bundle.version[com.liferay.hello.velocity.web]=6.0.9
@@ -996,7 +999,7 @@ bundle.version[com.liferay.item.selector.url.web]=6.0.8
 bundle.version[com.liferay.item.selector.web]=7.0.11
 bundle.version[com.liferay.javadoc.formatter]=1.0.37
 bundle.version[com.liferay.jaxws.osgi.bridge]=5.0.2
-bundle.version[com.liferay.jenkins.results.parser]=1.0.910
+bundle.version[com.liferay.jenkins.results.parser]=1.0.912
 bundle.version[com.liferay.journal.api]=9.0.1
 bundle.version[com.liferay.journal.article.dynamic.data.mapping.form.field.type.api]=1.0.4
 bundle.version[com.liferay.journal.article.dynamic.data.mapping.form.field.type]=2.0.6
@@ -1096,7 +1099,7 @@ bundle.version[com.liferay.learn.resources.test]=1.0.0
 bundle.version[com.liferay.learn.taglib]=1.0.6
 bundle.version[com.liferay.learn.web]=1.0.2
 bundle.version[com.liferay.license.manager.web]=6.0.7
-bundle.version[com.liferay.list.type.api]=1.0.2
+bundle.version[com.liferay.list.type.api]=1.1.0
 bundle.version[com.liferay.list.type.service]=1.0.2
 bundle.version[com.liferay.list.type.test]=1.0.0
 bundle.version[com.liferay.loan.calculator.web]=5.0.7
@@ -1190,13 +1193,13 @@ bundle.version[com.liferay.oauth2.provider.service]=4.0.10
 bundle.version[com.liferay.oauth2.provider.shortcut]=4.0.7
 bundle.version[com.liferay.oauth2.provider.test]=1.0.0
 bundle.version[com.liferay.oauth2.provider.web]=4.0.14
-bundle.version[com.liferay.object.admin.rest.api]=1.0.2
+bundle.version[com.liferay.object.admin.rest.api]=2.0.0
 bundle.version[com.liferay.object.admin.rest.client]=1.0.2
 bundle.version[com.liferay.object.admin.rest.impl]=1.0.2
 bundle.version[com.liferay.object.admin.rest.test]=1.0.0
-bundle.version[com.liferay.object.api]=3.0.1
+bundle.version[com.liferay.object.api]=4.0.0
 bundle.version[com.liferay.object.dynamic.data.mapping]=1.0.2
-bundle.version[com.liferay.object.rest.api]=1.0.2
+bundle.version[com.liferay.object.rest.api]=1.1.0
 bundle.version[com.liferay.object.rest.impl]=1.0.2
 bundle.version[com.liferay.object.service]=1.0.3
 bundle.version[com.liferay.object.test]=1.0.0
@@ -1233,7 +1236,7 @@ bundle.version[com.liferay.petra.executor]=5.0.2
 bundle.version[com.liferay.petra.function]=5.1.1
 bundle.version[com.liferay.petra.io.delta]=5.0.3
 bundle.version[com.liferay.petra.io]=5.0.3
-bundle.version[com.liferay.petra.json.validator]=5.0.3
+bundle.version[com.liferay.petra.json.validator]=6.0.0
 bundle.version[com.liferay.petra.json.web.service.client]=16.1.1
 bundle.version[com.liferay.petra.lang]=5.1.1
 bundle.version[com.liferay.petra.log4j]=5.0.3
@@ -1326,7 +1329,7 @@ bundle.version[com.liferay.portal.file.install.api]=4.0.4
 bundle.version[com.liferay.portal.file.install.impl]=4.0.8
 bundle.version[com.liferay.portal.file.install.test]=1.0.0
 bundle.version[com.liferay.portal.fragment.bundle.watcher]=4.0.4
-bundle.version[com.liferay.portal.impl]=8.0.1
+bundle.version[com.liferay.portal.impl]=8.0.2
 bundle.version[com.liferay.portal.inactive.request.handler]=4.0.9
 bundle.version[com.liferay.portal.init.servlet.filter]=6.0.4
 bundle.version[com.liferay.portal.instance.lifecycle.api]=4.0.3
@@ -1338,7 +1341,7 @@ bundle.version[com.liferay.portal.jmx.api]=5.0.3
 bundle.version[com.liferay.portal.jmx.test]=1.0.0
 bundle.version[com.liferay.portal.jmx]=8.0.3
 bundle.version[com.liferay.portal.jsp.engine]=1.0.3
-bundle.version[com.liferay.portal.kernel]=13.0.1
+bundle.version[com.liferay.portal.kernel]=13.1.1
 bundle.version[com.liferay.portal.language.extender]=6.0.7
 bundle.version[com.liferay.portal.language.lang]=1.0.9
 bundle.version[com.liferay.portal.language.servlet.filter]=6.0.5
@@ -1566,7 +1569,7 @@ bundle.version[com.liferay.portal.tools.db.support]=1.0.9
 bundle.version[com.liferay.portal.tools.db.upgrade.client]=4.0.0
 bundle.version[com.liferay.portal.tools.java.parser]=1.0.47
 bundle.version[com.liferay.portal.tools.portal.compat.bytecode.transformer]=1.0.4
-bundle.version[com.liferay.portal.tools.rest.builder]=1.0.214
+bundle.version[com.liferay.portal.tools.rest.builder]=1.0.215
 bundle.version[com.liferay.portal.tools.sample.sql.builder]=3.0.0
 bundle.version[com.liferay.portal.tools.service.builder.test.api]=1.0.0
 bundle.version[com.liferay.portal.tools.service.builder.test.service]=1.0.0
@@ -1593,7 +1596,7 @@ bundle.version[com.liferay.portal.validation.api]=4.0.3
 bundle.version[com.liferay.portal.verify.extender]=7.0.7
 bundle.version[com.liferay.portal.verify.test.util]=3.0.3
 bundle.version[com.liferay.portal.verify.test]=1.0.0
-bundle.version[com.liferay.portal.vulcan.api]=9.1.1
+bundle.version[com.liferay.portal.vulcan.api]=9.2.0
 bundle.version[com.liferay.portal.vulcan.impl]=5.0.17
 bundle.version[com.liferay.portal.vulcan.test]=1.0.0
 bundle.version[com.liferay.portal.web]=1.0.2
@@ -1623,7 +1626,7 @@ bundle.version[com.liferay.portal.workflow.metrics.api]=6.0.1
 bundle.version[com.liferay.portal.workflow.metrics.demo.data.creator.api]=2.0.4
 bundle.version[com.liferay.portal.workflow.metrics.demo.data.creator.impl]=2.0.5
 bundle.version[com.liferay.portal.workflow.metrics.demo]=2.0.4
-bundle.version[com.liferay.portal.workflow.metrics.rest.api]=11.0.1
+bundle.version[com.liferay.portal.workflow.metrics.rest.api]=11.1.0
 bundle.version[com.liferay.portal.workflow.metrics.rest.client]=3.0.8
 bundle.version[com.liferay.portal.workflow.metrics.rest.impl]=3.0.18
 bundle.version[com.liferay.portal.workflow.metrics.rest.spi]=3.0.5
@@ -1662,7 +1665,7 @@ bundle.version[com.liferay.portlet.test]=1.0.0
 bundle.version[com.liferay.portlet.title.localization.test]=1.0.0
 bundle.version[com.liferay.poshi.core]=1.0.33
 bundle.version[com.liferay.poshi.runner.resources]=1.0.11
-bundle.version[com.liferay.poshi.runner]=1.0.314
+bundle.version[com.liferay.poshi.runner]=1.0.316
 bundle.version[com.liferay.post.upgrade.fix.api]=4.0.0
 bundle.version[com.liferay.product.navigation.applications.menu.api]=2.0.6
 bundle.version[com.liferay.product.navigation.applications.menu.web.test]=1.0.0
@@ -1773,7 +1776,7 @@ bundle.version[com.liferay.search.experiences.web]=1.0.0
 bundle.version[com.liferay.segments.api]=3.2.1
 bundle.version[com.liferay.segments.asah.connector.test]=1.0.0
 bundle.version[com.liferay.segments.asah.connector]=3.0.9
-bundle.version[com.liferay.segments.asah.rest.api]=4.1.1
+bundle.version[com.liferay.segments.asah.rest.api]=4.2.0
 bundle.version[com.liferay.segments.asah.rest.client]=3.0.7
 bundle.version[com.liferay.segments.asah.rest.impl]=3.0.11
 bundle.version[com.liferay.segments.asah.rest.test]=1.0.0
@@ -1919,7 +1922,7 @@ bundle.version[com.liferay.sync.security]=6.0.3
 bundle.version[com.liferay.sync.service]=5.0.11
 bundle.version[com.liferay.sync.test]=1.0.0
 bundle.version[com.liferay.sync.web]=5.0.9
-bundle.version[com.liferay.template.api]=1.0.2
+bundle.version[com.liferay.template.api]=2.0.0
 bundle.version[com.liferay.template.service]=1.0.2
 bundle.version[com.liferay.template.taglib]=1.0.2
 bundle.version[com.liferay.template.test]=1.0.0
@@ -1929,7 +1932,7 @@ bundle.version[com.liferay.text.localizer.address.api]=4.0.3
 bundle.version[com.liferay.text.localizer.taglib.test]=1.0.0
 bundle.version[com.liferay.text.localizer.taglib]=4.0.5
 bundle.version[com.liferay.tld.formatter]=1.0.6
-bundle.version[com.liferay.translation.api]=5.5.1
+bundle.version[com.liferay.translation.api]=5.6.0
 bundle.version[com.liferay.translation.google.cloud.translator]=1.0.7
 bundle.version[com.liferay.translation.service]=2.0.11
 bundle.version[com.liferay.translation.test]=1.0.0
@@ -2319,6 +2322,9 @@ project.name[com.liferay.commerce.notification.test.util]=:apps:commerce:commerc
 project.name[com.liferay.commerce.notification.test]=:apps:commerce:commerce-notification-test
 project.name[com.liferay.commerce.notification.web]=:apps:commerce:commerce-notification-web
 project.name[com.liferay.commerce.order.content.web]=:apps:commerce:commerce-order-content-web
+project.name[com.liferay.commerce.order.rule.api]=:apps:commerce:commerce-order-rule-api
+project.name[com.liferay.commerce.order.rule.service]=:apps:commerce:commerce-order-rule-service
+project.name[com.liferay.commerce.order.rule.test]=:apps:commerce:commerce-order-rule-test
 project.name[com.liferay.commerce.order.web]=:apps:commerce:commerce-order-web
 project.name[com.liferay.commerce.organization.api]=:dxp:apps:commerce:commerce-organization-api
 project.name[com.liferay.commerce.organization.web]=:dxp:apps:commerce:commerce-organization-web
