LPS-139801 Fix accesibility issues in DatasetDisplay buttons

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -1798,6 +1798,7 @@ client-secret-id=Client Secret ID
 client-version=Client Version
 clock-skew=Clock Skew
 clock-skew-description=Set the time in milliseconds that the clocks can differ before a code will be rejected. This means the checker could perform a validation against the current time and then two further validations (+ clock skew time / - clock skew time).
+close-fields-menu=Close fields menu
 cluster-executor-configuration-name=Cluster Executor
 cluster-name=Cluster Name
 cluster-name-help=This configuration only applies to EMBEDDED (Development) mode. Set the name of the cluster to join.
@@ -6233,6 +6234,7 @@ open-actions-menu=Open Actions Menu
 open-analytics-cloud=Open Analytics Cloud
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Open developer tools in the browser to see the selected occurrence.
+open-fields-menu=Open fields menu
 open-form=Open Form
 open-graph=Open Graph
 open-graph-alt-description=Alt Description
