--- a/modules/modules.properties
+++ b/modules/modules.properties
@@ -18,6 +18,7 @@ bundle.symbolic.name[@liferay/frontend-js-a11y-web]=com.liferay.frontend.js.a11y
 bundle.symbolic.name[@liferay/frontend-js-react-web]=com.liferay.frontend.js.react.web
 bundle.symbolic.name[@liferay/frontend-js-state-web]=com.liferay.frontend.js.state.web
 bundle.symbolic.name[@liferay/frontend-taglib]=com.liferay.frontend.taglib
+bundle.symbolic.name[@liferay/journal-content-web]=com.liferay.journal.content.web
 bundle.symbolic.name[@liferay/map-common]=com.liferay.map.common
 bundle.symbolic.name[@liferay/map-google-maps]=com.liferay.map.google.maps
 bundle.symbolic.name[@liferay/map-openstreetmap]=com.liferay.map.openstreetmap
@@ -491,7 +492,7 @@ bundle.version[com.liferay.commerce.notification.test.util]=4.0.3
 bundle.version[com.liferay.commerce.notification.test]=1.0.0
 bundle.version[com.liferay.commerce.notification.web]=4.0.9
 bundle.version[com.liferay.commerce.order.content.web]=4.0.10
-bundle.version[com.liferay.commerce.order.rule.api]=1.0.2
+bundle.version[com.liferay.commerce.order.rule.api]=1.1.0
 bundle.version[com.liferay.commerce.order.rule.service]=1.0.2
 bundle.version[com.liferay.commerce.order.rule.test]=1.0.0
 bundle.version[com.liferay.commerce.order.web]=5.0.12
@@ -722,7 +723,7 @@ bundle.version[com.liferay.dynamic.data.mapping.form.builder]=4.0.15
 bundle.version[com.liferay.dynamic.data.mapping.form.evaluator.impl]=4.0.21
 bundle.version[com.liferay.dynamic.data.mapping.form.field.type.api]=1.3.3
 bundle.version[com.liferay.dynamic.data.mapping.form.field.type]=6.0.43
-bundle.version[com.liferay.dynamic.data.mapping.form.item.selector.api]=1.0.4
+bundle.version[com.liferay.dynamic.data.mapping.form.item.selector.api]=1.1.0
 bundle.version[com.liferay.dynamic.data.mapping.form.renderer]=6.0.20
 bundle.version[com.liferay.dynamic.data.mapping.form.report.web]=2.0.7
 bundle.version[com.liferay.dynamic.data.mapping.form.taglib]=4.0.8
@@ -1329,7 +1330,7 @@ bundle.version[com.liferay.portal.file.install.api]=4.0.4
 bundle.version[com.liferay.portal.file.install.impl]=4.0.9
 bundle.version[com.liferay.portal.file.install.test]=1.0.0
 bundle.version[com.liferay.portal.fragment.bundle.watcher]=4.0.4
-bundle.version[com.liferay.portal.impl]=8.0.2
+bundle.version[com.liferay.portal.impl]=8.0.3
 bundle.version[com.liferay.portal.inactive.request.handler]=4.0.9
 bundle.version[com.liferay.portal.init.servlet.filter]=6.0.4
 bundle.version[com.liferay.portal.instance.lifecycle.api]=4.0.3
@@ -1559,7 +1560,7 @@ bundle.version[com.liferay.portal.template.soy.renderer.impl]=3.0.3
 bundle.version[com.liferay.portal.template.test]=1.0.0
 bundle.version[com.liferay.portal.template.velocity]=6.0.12
 bundle.version[com.liferay.portal.template.xsl]=6.0.6
-bundle.version[com.liferay.portal.test]=10.0.1
+bundle.version[com.liferay.portal.test]=10.0.2
 bundle.version[com.liferay.portal.tools.bundle.support]=3.7.4
 bundle.version[com.liferay.portal.tools.data.partitioning.sql.builder.mysql]=3.0.0
 bundle.version[com.liferay.portal.tools.data.partitioning.sql.builder.postgresql]=3.0.0
@@ -1926,7 +1927,6 @@ bundle.version[com.liferay.template.api]=2.0.1
 bundle.version[com.liferay.template.service]=1.0.3
 bundle.version[com.liferay.template.taglib]=1.0.2
 bundle.version[com.liferay.template.test]=1.0.0
-bundle.version[com.liferay.template.web.test]=1.0.0
 bundle.version[com.liferay.template.web]=1.0.3
 bundle.version[com.liferay.text.localizer.address.api]=4.0.3
 bundle.version[com.liferay.text.localizer.taglib.test]=1.0.0
@@ -3754,7 +3754,6 @@ project.name[com.liferay.template.api]=:apps:template:template-api
 project.name[com.liferay.template.service]=:apps:template:template-service
 project.name[com.liferay.template.taglib]=:apps:template:template-taglib
 project.name[com.liferay.template.test]=:apps:template:template-test
-project.name[com.liferay.template.web.test]=:apps:template:template-web-test
 project.name[com.liferay.template.web]=:apps:template:template-web
 project.name[com.liferay.text.localizer.address.api]=:apps:text-localizer:text-localizer-address-api
 project.name[com.liferay.text.localizer.taglib.test]=:apps:text-localizer:text-localizer-taglib-test
