LPS-105380 Enforce naming for variables of type 'AssetRendererFactory'

--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -270,6 +270,7 @@
         .*(In|Out)putStream,\
         .*Attributes,\
         .*ContextContributor,\
+        AssetRendererFactory,\
         BaseUpgradeServiceModuleRelease,\
         BundleContext,\
         Connection,\
@@ -331,6 +332,7 @@
         .*ContextContributor,\
         .*DocumentRequest(Executor|Translator),\
         .*URLProvider,\
+        AssetRendererFactory,\
         BaseUpgradeServiceModuleRelease,\
         BundleContext,\
         Connection,\
