COMMERCE-7142 portal-language-lang - new keys

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=At least one value is required.
 attachment-found-in-wiki-page-x=Attachment Found in Wiki Page {0}
 attend=Attend
 attribute=Attribute
+attribute-code=Attribute Code
 attribute-mapping=Attribute Mapping
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>.
 attributes=Attributes
@@ -3370,6 +3371,7 @@ enter-your-custom-css-class-names=Enter your custom CSS class names.
 enters-task=Enters Task:
 entire-series=Entire Series
 entity=Entity
+entity-attributes=Entity Attributes
 entity-endpoint-enabled=Entity Endpoint Enabled
 entity-endpoint-enabled-description=Enable auto tagging of text using the Cloud Natural Language API Entity endpoint.
 entity-id-help=Entity ID is a unique identifier that can be up to 1024 characters long.
