--- a/modules/apps/batch-planner/batch-planner-web/build.gradle
+++ b/modules/apps/batch-planner/batch-planner-web/build.gradle
@@ -11,6 +11,7 @@ dependencies {
 	compileOnly project(":apps:batch-planner:batch-planner-api")
 	compileOnly project(":apps:frontend-taglib:frontend-taglib")
 	compileOnly project(":apps:frontend-taglib:frontend-taglib-clay")
+	compileOnly project(":apps:frontend-taglib:frontend-taglib-react")
 	compileOnly project(":apps:petra:petra-portlet-url-builder")
 	compileOnly project(":apps:portal-vulcan:portal-vulcan-api")
 	compileOnly project(":core:petra:petra-function")
