LPS-140403 portal-impl: adds a portal property to disable the enterprise product notification

--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -1914,6 +1914,15 @@
     #
     enterprise.product.enterprise.search.enabled=true
 
+    #
+    # Set this property to true to display a modal containing the terms of use
+    # for each enabled Liferay Enterprise Product to the administrators of each
+    # virtual instance.
+    #
+    # Env: LIFERAY_ENTERPRISE_PERIOD_PRODUCT_PERIOD_NOTIFICATION_PERIOD_ENABLED
+    #
+    enterprise.product.notification.enabled=true
+
 ##
 ## JavaScript
 ##
