--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -1916,8 +1916,7 @@
 
     #
     # Set this property to true to display a modal containing the terms of use
-    # for each enabled Liferay Enterprise Product to the administrators of each
-    # virtual instance.
+    # for each enabled Liferay enterprise product to omniadmin users.
     #
     # Env: LIFERAY_ENTERPRISE_PERIOD_PRODUCT_PERIOD_NOTIFICATION_PERIOD_ENABLED
     #
