--- a/modules/modules.properties
+++ b/modules/modules.properties
@@ -1,3 +1,4 @@
+bundle.symbolic.name[@liferay/batch-planner-web]=com.liferay.batch.planner.web
 bundle.symbolic.name[@liferay/comment-taglib]=com.liferay.comment.taglib
 bundle.symbolic.name[@liferay/commerce-channel-web]=com.liferay.commerce.channel.web
 bundle.symbolic.name[@liferay/commerce-order-web]=com.liferay.commerce.order.web
@@ -492,7 +493,7 @@ bundle.version[com.liferay.commerce.notification.test.util]=4.0.3
 bundle.version[com.liferay.commerce.notification.test]=1.0.0
 bundle.version[com.liferay.commerce.notification.web]=4.0.9
 bundle.version[com.liferay.commerce.order.content.web]=4.0.10
-bundle.version[com.liferay.commerce.order.rule.api]=1.1.1
+bundle.version[com.liferay.commerce.order.rule.api]=2.0.0
 bundle.version[com.liferay.commerce.order.rule.service]=1.0.3
 bundle.version[com.liferay.commerce.order.rule.test]=1.0.0
 bundle.version[com.liferay.commerce.order.web]=5.0.12
@@ -721,7 +722,7 @@ bundle.version[com.liferay.dynamic.data.mapping.expression]=6.0.8
 bundle.version[com.liferay.dynamic.data.mapping.form.analytics]=5.0.3
 bundle.version[com.liferay.dynamic.data.mapping.form.builder]=4.0.15
 bundle.version[com.liferay.dynamic.data.mapping.form.evaluator.impl]=4.0.21
-bundle.version[com.liferay.dynamic.data.mapping.form.field.type.api]=1.3.3
+bundle.version[com.liferay.dynamic.data.mapping.form.field.type.api]=1.4.0
 bundle.version[com.liferay.dynamic.data.mapping.form.field.type]=6.0.44
 bundle.version[com.liferay.dynamic.data.mapping.form.item.selector.api]=1.1.1
 bundle.version[com.liferay.dynamic.data.mapping.form.renderer]=6.0.20
@@ -1000,7 +1001,7 @@ bundle.version[com.liferay.item.selector.url.web]=6.0.8
 bundle.version[com.liferay.item.selector.web]=7.0.11
 bundle.version[com.liferay.javadoc.formatter]=1.0.37
 bundle.version[com.liferay.jaxws.osgi.bridge]=5.0.2
-bundle.version[com.liferay.jenkins.results.parser]=1.0.912
+bundle.version[com.liferay.jenkins.results.parser]=1.0.914
 bundle.version[com.liferay.journal.api]=9.0.1
 bundle.version[com.liferay.journal.article.dynamic.data.mapping.form.field.type.api]=1.0.4
 bundle.version[com.liferay.journal.article.dynamic.data.mapping.form.field.type]=2.0.6
@@ -1664,9 +1665,9 @@ bundle.version[com.liferay.portlet.preferences.test]=1.0.0
 bundle.version[com.liferay.portlet.tck.bridge]=4.0.1
 bundle.version[com.liferay.portlet.test]=1.0.0
 bundle.version[com.liferay.portlet.title.localization.test]=1.0.0
-bundle.version[com.liferay.poshi.core]=1.0.33
+bundle.version[com.liferay.poshi.core]=1.0.34
 bundle.version[com.liferay.poshi.runner.resources]=1.0.11
-bundle.version[com.liferay.poshi.runner]=1.0.316
+bundle.version[com.liferay.poshi.runner]=1.0.317
 bundle.version[com.liferay.post.upgrade.fix.api]=4.0.0
 bundle.version[com.liferay.product.navigation.applications.menu.api]=2.0.6
 bundle.version[com.liferay.product.navigation.applications.menu.web.test]=1.0.0
