LPS-140393 As a Commerce subscriber, I want Commerce modules to be activated by default

--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -1903,7 +1903,7 @@
     #
     # Env: LIFERAY_ENTERPRISE_PERIOD_PRODUCT_PERIOD_COMMERCE_PERIOD_ENABLED
     #
-    enterprise.product.commerce.enabled=false
+    enterprise.product.commerce.enabled=true
 
     #
     # Set this property to true to enable use of Liferay Enterprise Search (LES)
