--- a/modules/modules.properties
+++ b/modules/modules.properties
@@ -741,6 +741,7 @@ bundle.version[com.liferay.dynamic.data.mapping.uad]=2.0.8
 bundle.version[com.liferay.dynamic.data.mapping.validator]=6.0.10
 bundle.version[com.liferay.dynamic.data.mapping.web.test]=1.0.0
 bundle.version[com.liferay.dynamic.data.mapping.web]=5.0.18
+bundle.version[com.liferay.enterprise.product.notification.web]=1.0.0
 bundle.version[com.liferay.expando.api]=4.0.3
 bundle.version[com.liferay.expando.exportimport]=4.0.6
 bundle.version[com.liferay.expando.taglib]=5.0.7
@@ -1331,7 +1332,7 @@ bundle.version[com.liferay.portal.file.install.api]=4.0.4
 bundle.version[com.liferay.portal.file.install.impl]=4.0.9
 bundle.version[com.liferay.portal.file.install.test]=1.0.0
 bundle.version[com.liferay.portal.fragment.bundle.watcher]=4.0.4
-bundle.version[com.liferay.portal.impl]=8.0.4
+bundle.version[com.liferay.portal.impl]=8.1.0
 bundle.version[com.liferay.portal.inactive.request.handler]=4.0.9
 bundle.version[com.liferay.portal.init.servlet.filter]=6.0.4
 bundle.version[com.liferay.portal.instance.lifecycle.api]=4.0.3
@@ -1343,7 +1344,7 @@ bundle.version[com.liferay.portal.jmx.api]=5.0.3
 bundle.version[com.liferay.portal.jmx.test]=1.0.0
 bundle.version[com.liferay.portal.jmx]=8.0.3
 bundle.version[com.liferay.portal.jsp.engine]=1.0.3
-bundle.version[com.liferay.portal.kernel]=13.1.1
+bundle.version[com.liferay.portal.kernel]=13.2.0
 bundle.version[com.liferay.portal.language.extender]=6.0.7
 bundle.version[com.liferay.portal.language.lang]=1.0.11
 bundle.version[com.liferay.portal.language.servlet.filter]=6.0.5
@@ -2571,6 +2572,7 @@ project.name[com.liferay.dynamic.data.mapping.uad]=:apps:dynamic-data-mapping:dy
 project.name[com.liferay.dynamic.data.mapping.validator]=:apps:dynamic-data-mapping:dynamic-data-mapping-validator
 project.name[com.liferay.dynamic.data.mapping.web.test]=:apps:dynamic-data-mapping:dynamic-data-mapping-web-test
 project.name[com.liferay.dynamic.data.mapping.web]=:apps:dynamic-data-mapping:dynamic-data-mapping-web
+project.name[com.liferay.enterprise.product.notification.web]=:dxp:apps:enterprise-product-notification:enterprise-product-notification-web
 project.name[com.liferay.expando.api]=:apps:expando:expando-api
 project.name[com.liferay.expando.exportimport]=:apps:expando:expando-export-import
 project.name[com.liferay.expando.taglib]=:apps:expando:expando-taglib
