LPS-140403 the dot matters

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -3369,9 +3369,9 @@ enter-your-current-password-to-confirm-changes=Enter your current password to co
 enter-your-custom-css=Enter your custom CSS.
 enter-your-custom-css-class-names=Enter your custom CSS class names.
 enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}.
-enterprise-product-notification-body[enterpriseSearch]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}.
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}.
 enterprise-product-notification-title[commerce]=Commerce
-enterprise-product-notification-title[enterpriseSearch]=Liferay Enterprise Search
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search
 enters-task=Enters Task:
 entire-series=Entire Series
 entity=Entity
