--- a/build.properties
+++ b/build.properties
@@ -282,6 +282,7 @@
     #    dxp/apps/commerce-avalara,\
     #    dxp/apps/commerce-salesforce-connector,\
     #    dxp/apps/document-library-opener,\
+    #    dxp/apps/enterprise-product-notification,\
     #    dxp/apps/frontend-theme,\
     #    dxp/apps/multi-factor-authentication,\
     #    dxp/apps/portal,\
