--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -523,6 +523,7 @@
         com.liferay.portal.kernel.service.permission.CommonPermissionUtil,\
         com.liferay.portal.kernel.service.permission.GroupPermissionUtil,\
         com.liferay.portal.kernel.service.permission.OrganizationPermissionUtil,\
+        com.liferay.portal.kernel.service.permission.PasswordPolicyPermissionUtil,\
         com.liferay.portal.kernel.util.HttpUtil,\
         com.liferay.portal.kernel.util.PortalUtil
 
