LPS-143635 Modify SF to make sure PortalPermissionUtil is no longer in modules

--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -524,6 +524,7 @@
         com.liferay.portal.kernel.service.permission.GroupPermissionUtil,\
         com.liferay.portal.kernel.service.permission.OrganizationPermissionUtil,\
         com.liferay.portal.kernel.service.permission.PasswordPolicyPermissionUtil,\
+        com.liferay.portal.kernel.service.permission.PortalPermissionUtil,\
         com.liferay.portal.kernel.util.HttpUtil,\
         com.liferay.portal.kernel.util.PortalUtil
 
