--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -527,6 +527,7 @@
         com.liferay.portal.kernel.service.permission.OrganizationPermissionUtil,\
         com.liferay.portal.kernel.service.permission.PasswordPolicyPermissionUtil,\
         com.liferay.portal.kernel.service.permission.PortalPermissionUtil,\
+        com.liferay.portal.kernel.service.permission.RolePermissionUtil,\
         com.liferay.portal.kernel.util.HttpUtil,\
         com.liferay.portal.kernel.util.PortalUtil
 
