LPS-143636 Modify SF to make sure UserGroupPermissionUtil is no longer in modules

--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -528,6 +528,7 @@
         com.liferay.portal.kernel.service.permission.PasswordPolicyPermissionUtil,\
         com.liferay.portal.kernel.service.permission.PortalPermissionUtil,\
         com.liferay.portal.kernel.service.permission.RolePermissionUtil,\
+        com.liferay.portal.kernel.service.permission.UserGroupPermissionUtil,\
         com.liferay.portal.kernel.util.HttpUtil,\
         com.liferay.portal.kernel.util.PortalUtil
 
