LPS-143637 Modify SF to make sure UserPermissionUtil is no longer in modules

--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -529,6 +529,7 @@
         com.liferay.portal.kernel.service.permission.PortalPermissionUtil,\
         com.liferay.portal.kernel.service.permission.RolePermissionUtil,\
         com.liferay.portal.kernel.service.permission.UserGroupPermissionUtil,\
+        com.liferay.portal.kernel.service.permission.UserPermissionUtil,\
         com.liferay.portal.kernel.util.HttpUtil,\
         com.liferay.portal.kernel.util.PortalUtil
 
