--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -530,6 +530,7 @@
         com.liferay.portal.kernel.service.permission.RolePermissionUtil,\
         com.liferay.portal.kernel.service.permission.UserGroupPermissionUtil,\
         com.liferay.portal.kernel.service.permission.UserPermissionUtil,\
+        com.liferay.portal.kernel.servlet.DirectRequestDispatcherFactoryUtil,\
         com.liferay.portal.kernel.util.HttpUtil,\
         com.liferay.portal.kernel.util.PortalUtil
 
