--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS_latin.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS_latin.properties
@@ -14271,6 +14271,7 @@ styles-by-default=Styles by Default (Automatic Copy)
 styles-from-master=Styles from Master (Automatic Copy)
 styles-from-theme=Styles from Theme (Automatic Copy)
 stylesheet=Stilova
+sub-total=Sub Total (Automatic Copy)
 subcategories=Pod-kategorije
 subcategories[message-board]=Pod-kategorije
 subcategory[message-board]=Subcategory (Automatic Copy)
