LPS-114788 Add instance level configuration

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -9169,6 +9169,8 @@ miller-columns=Miller Columns
 millimeter=Millimeter
 million-abbreviation=M
 mime-type=MIME Type
+mime-type-size-limit-configuration-name=Size Limits by Mime Type
+mime-type-size-limit-name=Mime Type Size Limit
 min=Min
 min-doc-freq=Minimum Document Frequency
 min-doc-freq-help=Set the minimum document frequency below which the input document's terms are to be ignored. If left blank, this defaults to 5.
