LPS-148107 Add new language keys

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -7200,6 +7200,7 @@ import-export-center=Import/Export Center
 import-file=Import File
 import-file-max-size=Import file max size
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Import file max size must be within upload request max size boundaries
+import-files=Import Files
 import-fragments=Import Fragments
 import-from-ldap=Import from LDAP
 import-from-ldap-description=Set this to true if you want to import the users from LDAP after successful login through OpenSSO. The LDAP settings need to be configured properly in the LDAP section. If this is set to false, the users will be created from OpenSSO provided data.
@@ -11444,6 +11445,7 @@ please-upgrade-your-browser-to-use-this-feature=Please upgrade your browser to u
 please-upload-a-file=Please upload a file.
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Please upload a file with a valid extension (JAR, LPKG, or WAR File).
 please-upload-your-translation-file=Please upload your translation file (.xliff, .xlf, .zip).
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files.
 please-verify-your-repository-configuration-parameters=Please verify your repository configuration parameters.
 please-wait=Please wait.
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Please wait as the publish processes complete on the remote site.
@@ -12334,6 +12336,7 @@ repeatable=Repeatable
 repeats=Repeats
 replace=Replace
 replace-certificate=Replace Certificate
+replace-files=Replace Files
 replace-with=Replace with:
 replacement=Replacement
 replacement-product=Replacement Product
