LPS-147010 Add condition when the objectViewColumns is empty

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -4554,6 +4554,7 @@ declined=Declined
 decorated=Decorated
 decoration=Decoration
 default=Default
+default-view-must-be-at-least-one-column=Default view must be at least one column.
 default-account-addresses=Default Account Addresses
 default-account-terms-and-conditions=Default Account Terms and Conditions
 default-associations=Default Associations
