LPS-147579 Add proper language key

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -1769,6 +1769,7 @@ article-comments-enabled=Article Comments Enabled
 article-display-style=Article Display Style
 article-id=Article ID
 article-increment-priority-enabled=Article Increment Priority Enabled
+article-is-not-displayable=Article is not displayable
 article-or-folder=Article or Folder
 article-updated-email=Article Updated Email
 article-version=Article Version
