LPS-144178 portal-language-lang: Update language keys for search context attributes

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -1982,7 +1982,6 @@ attribute-code=Attribute Code
 attribute-mapping=Attribute Mapping
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>.
 attributes=Attributes
-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration.
 attributes-enabled=Attributes Enabled
 attributes-help=Enter attribute statement attribute names <strong>per line</strong> that are included in the assertion.
 attributes-namespace-enabled=Attributes Namespace Enabled
@@ -12899,6 +12898,8 @@ search-colon=Search:
 search-container=Search Container
 search-container-help=Access helper methods to retrieve search container values (for example, total results count).
 search-content=Search Content
+search-context-attributes=Search Context Attributes
+search-context-attributes-description=These attributes will only affect the results in this preview and will not be saved with the blueprint configuration.
 search-coupons=Search Coupons
 search-custom-range-date-format=Please enter a date in the following format: YYYY-MM-DD
 search-custom-range-invalid-date-range=Please select a valid date range.
