--- a/modules/apps/portal/portal-tika/build.gradle
+++ b/modules/apps/portal/portal-tika/build.gradle
@@ -1,6 +1,8 @@
 dependencies {
 	compileInclude group: "com.liferay", name: "org.gagravarr.tika", version: "0.8.LIFERAY-PATCHED-1"
 	compileInclude group: "org.apache.commons", name: "commons-lang3", version: "3.12.0"
+	compileInclude group: "org.apache.james", name: "apache-mime4j-core", version: "0.8.3"
+	compileInclude group: "org.apache.james", name: "apache-mime4j-dom", version: "0.8.3"
 	compileInclude group: "org.apache.tika", name: "tika-core", version: "1.26"
 	compileInclude group: "org.apache.tika", name: "tika-parsers", version: "1.26"
 	compileInclude group: "org.gagravarr", name: "vorbis-java-core", version: "0.8"
