LPS-147487 set TestrayProject name to mandatory and searchble

--- a/modules/apps/site-initializer/site-initializer-testray/src/main/resources/site-initializer/object-definitions/testray-project.json
+++ b/modules/apps/site-initializer/site-initializer-testray/src/main/resources/site-initializer/object-definitions/testray-project.json
@@ -5,13 +5,14 @@
 	"name": "TestrayProject",
 	"objectFields": [
 		{
-			"indexed": false,
+			"indexed": true,
 			"indexedAsKeyword": false,
+			"indexedLanguageId": "",
 			"label": {
 				"en_US": "Name"
 			},
 			"name": "name",
-			"required": false,
+			"required": true,
 			"type": "String"
 		},
 		{
