LPS-148302 Move poi to portal-tika module

--- a/modules/apps/portal/portal-tika/build.gradle
+++ b/modules/apps/portal/portal-tika/build.gradle
@@ -3,6 +3,10 @@ dependencies {
 	compileInclude group: "org.apache.commons", name: "commons-lang3", version: "3.12.0"
 	compileInclude group: "org.apache.james", name: "apache-mime4j-core", version: "0.8.3"
 	compileInclude group: "org.apache.james", name: "apache-mime4j-dom", version: "0.8.3"
+	compileInclude group: "org.apache.poi", name: "poi", version: "4.1.2"
+	compileInclude group: "org.apache.poi", name: "poi-ooxml", version: "4.1.2"
+	compileInclude group: "org.apache.poi", name: "poi-ooxml-schemas", version: "4.1.2"
+	compileInclude group: "org.apache.poi", name: "poi-scratchpad", version: "4.1.2"
 	compileInclude group: "org.apache.tika", name: "tika-core", version: "1.26"
 	compileInclude group: "org.apache.tika", name: "tika-parsers", version: "1.26"
 	compileInclude group: "org.gagravarr", name: "vorbis-java-core", version: "0.8"
