--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -13356,6 +13356,7 @@ servers=Servers
 service=Service
 service-access-policy-entry-default-asset-entry-title=Public Access to the Asset Entry API
 service-access-policy-entry-default-calendar-title=Public Access to the Calendar Search API
+service-access-policy-entry-default-object-title=Public Access to the Object Search API
 service-access-policy-name=Service Access Policy Name
 service-access-policy-name-is-required=Service access policy name is required.
 service-access-policy-title-is-required=Service access policy title is required.
