LPS-146798 Add next event start and end labels

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -9865,6 +9865,8 @@ news=News
 news-selections=News Selections
 next=Next
 next-change=Next Change
+next-event-ends=Next Event Ends
+next-event-starts=Next Event Starts
 next-fire-date=Next Run Date
 next-iteration-date=Next Iteration Date
 next-message=Next Message
