--- a/modules/apps/analytics/analytics-batch-export-import-impl/build.gradle
+++ b/modules/apps/analytics/analytics-batch-export-import-impl/build.gradle
@@ -7,7 +7,8 @@ dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.4.0"
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
 	compileOnly project(":apps:analytics:analytics-batch-export-import-api")
-	compileOnly project(":apps:analytics:analytics-message-sender-api")
+	compileOnly project(":apps:analytics:analytics-message-storage-api")
+	compileOnly project(":apps:analytics:analytics-settings-api")
 	compileOnly project(":apps:batch-engine:batch-engine-api")
 	compileOnly project(":core:petra:petra-function")
 	compileOnly project(":core:petra:petra-string")
