COMMERCE-8387 - Add new lang key

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Manage Availability Estimates
 action.MANAGE_COMMERCE_CURRENCIES=Manage Currencies
 action.MANAGE_COMMERCE_HEALTH_STATUS=Manage Health Status
 action.MANAGE_COMMERCE_ORDER_NOTES=Manage Order Notes
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods
 action.MANAGE_COMMERCE_ORDER_PRICES=Manage Order Prices
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Manage Order Restricted Notes
 action.MANAGE_COMMERCE_ORDERS=Manage Orders
