--- a/modules/apps/site-initializer/site-initializer-testray/extra/java-function/build.gradle
+++ b/modules/apps/site-initializer/site-initializer-testray/extra/java-function/build.gradle
@@ -5,6 +5,7 @@ apply plugin: "java"
 dependencies {
 	compile group: "com.google.cloud.functions", name:"functions-framework-api", version:"1.0.4"
 	compile group: "org.json", name: "json", version: "20180813"
+	compile group: "com.liferay", name: "com.liferay.petra.http.invoker", version: "1.0.0"
 	compile group: "org.rauschig", name: "jarchivelib", version: "0.7.1"
 	implementation group: "com.google.cloud", name: "google-cloud-storage", version: "2.4.0"
 
