LPS-147487 change scope from site to company in ObjectDefinitions

--- a/modules/apps/site-initializer/site-initializer-testray/src/main/resources/site-initializer/object-definitions/testray-project.json
+++ b/modules/apps/site-initializer/site-initializer-testray/src/main/resources/site-initializer/object-definitions/testray-project.json
@@ -25,11 +25,9 @@
 			"required": false,
 			"type": "String"
 		}
-	],
-	"panelAppOrder": "100",
-	"panelCategoryKey": "site_administration.content",
+	],	
 	"pluralLabel": {
 		"en_US": "Testray Projects"
 	},
-	"scope": "site"
+	"scope": "company"
 }
